syntax = "proto3";

package qdrant;

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Qdrant.Client.Grpc";

service Snapshots {
  rpc Create(CreateSnapshotRequest) returns (CreateSnapshotResponse) {}
  rpc List(ListSnapshotsRequest) returns (ListSnapshotsResponse) {}
  rpc Delete(DeleteSnapshotRequest) returns (DeleteSnapshotResponse) {}
  rpc CreateFull(CreateFullSnapshotRequest) returns (CreateSnapshotResponse) {}
  rpc ListFull(ListFullSnapshotsRequest) returns (ListSnapshotsResponse) {}
  rpc DeleteFull(DeleteFullSnapshotRequest) returns (DeleteSnapshotResponse) {}
}

message CreateFullSnapshotRequest {}

message ListFullSnapshotsRequest {}

message DeleteFullSnapshotRequest {
  string snapshot_name = 1;
}

message CreateSnapshotRequest {
  string collection_name = 1;
}

message ListSnapshotsRequest {
  string collection_name = 1;
}

message DeleteSnapshotRequest {
  string collection_name = 1;
  string snapshot_name = 2;
}

message SnapshotDescription {
  string name = 1;
  google.protobuf.Timestamp creation_time = 2;
  int64 size = 3;
  optional string checksum = 4;
}

message CreateSnapshotResponse {
  SnapshotDescription snapshot_description = 1;
  double time = 2;
}

message ListSnapshotsResponse {
  repeated SnapshotDescription snapshot_descriptions = 1;
  double time = 2;
}

message DeleteSnapshotResponse {
  double time = 1;
}
